Fix: Ensure browse nav does not break onto two lines

--- a/app/assets/stylesheets/design/navigation.scss
+++ b/app/assets/stylesheets/design/navigation.scss
@@ -185,6 +185,10 @@
   }
 }
 
+#navigation .nav_browse .subnav {
+  width: 225px;
+}
+
 //
 //  Because of js timeouts on the previewable menu items we
 //  don't want css hovers here so we change them back to default.
